# miniDebugger

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: README.md
examples/: hello.cpp  stack_unwinding.cpp  variable.cpp
include/: breakpoint.h  debugger.h  mem.h  reg.h
src/: breakPoint.cpp  debugger.cpp  mem.cpp  miniDebugger.cpp
